Refactor `runEsqlAsTextWithFormat` to support async mode